[package]
name = "ocilot"
version = "0.1.0-pre"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wax = "0.4"
regex = "1.5"
clap = { version = "3.0", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "4.0"

[dependencies.ocilot-core]
path = './core'
